1.แก้ bugs กดปุ่ม arrow-left,right ตอนแก้ไขข้อความในหน้า database ไม่ได้ 2. เอา horizontal scrollbar ออก

--- a/css/UI.css
+++ b/css/UI.css
@@ -4,6 +4,7 @@
 */
     html{    
         height:100%;
+        overflow-x: hidden;
     }
     #map-canvas{
         width: 100%;
